# c-boilerplate

./: .clang-format  .clang-tidy  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  main.cpp
src/boilerplate/: CMakeLists.txt  Example.cpp  Example.h
